Mon Apr 05 20:49:14 PDT 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimEventLoop.cpp:
	* src/QGaimEventLoop.h:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* gaim.pro:
	  - Added Qt event loop bindings.
	  - Fixed to compile with libgaim 0.76.

Wed Feb 18 16:33:12 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimTabBar.cpp:
	  - Status changes no longer applies to the wrong tabs, and issues
	    closing some tabs are fixed. This fixes bug #831222.

Wed Feb 18 16:09:45 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Cleaned up some conditionals.

Sat Feb 07 16:24:50 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	  - Move from some deprecated functions to the new replacements.

Sat Feb 07 16:08:59 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimProtocolBox.cpp:
	  - The first listed protocol is now the default.

Sat Feb 07 15:43:34 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolBox.h:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	  - Updated to compile against libgaim 0.75.

Thu Jan 01 00:50:23 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* Copyright Commit 2004.

Sat Nov 22 00:59:44 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* NEWS:
	* mkstuff.conf:
	  - Release 0.4.

Fri Nov 21 23:30:52 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Require libopie.

Sun Nov 16 14:55:02 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Don't increment the active notification count when a single
	    conversation is notifying multiple times. This way, the LED
	    doesn't get stuck.
