@@ -1,3 +1,8 @@
+Mon Apr 05 20:52:44 PDT 2004  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimEventLoop.h:
+	  - Hopefully make the slots work.
+
 Mon Apr 05 20:49:14 PDT 2004  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
